--- a/numpy/question.1
+++ b/numpy/question.1
@@ -1,12 +1,12 @@
 
-Write a Python function to check whether a number falls in a given range.
+Write a Python program to reverse a string.
 
-def test_range(n):
-    if n in range(3,9):
-        print( " %s is in the range"%str(n))
-    else :
-        print("The number is outside the given range.")
-a=int(input("enter a number: "))
-test_range(a)
-© 2022 GitHub, Inc.
-Terms
+def string_reverse(str1):
+
+    rstr1 = ''
+    index = len(str1)
+    while index > 0:
+        rstr1 += str1[ index - 1 ]
+        index = index - 1
+    return rstr1
+print(string_reverse('SANDHYASINGH1234'))
