--- a/numpy/question.2
+++ b/numpy/question.2
@@ -1,10 +1,5 @@
-#Python program to multiply all values in the list using numpy.
+#Write a Python program to create a 3×3 matrix.
 
-import numpy
-
-list1 = [1, 2, 3]
-list2 = [3, 2, 4]
-result1 = numpy.prod(list1)
-result2 = numpy.prod(list2)
-print("List 1=", result1)
-print("List 2=", result2)
+import numpy as np
+x =  np.arange(2, 11).reshape(3,3)
+print(x)
